# LHAPDF-for-Win

./: .gitignore  CMakeLists.txt  GetLHAPDF.ps1  README.md
patch/: Paths.cc
